<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/planTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/titleTextMarginStart"
            android:layout_marginTop="@dimen/titleTextMarginTop"
            android:text="@string/planTitleToday"
            android:textSize="@dimen/titleTextSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/planTitleDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/planTitleData"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/planTitle"
            app:layout_constraintTop_toBottomOf="@id/planTitle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/planRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/contentsMarginHorizontal"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/contentsMarginHorizontal"
            android:overScrollMode="never"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/planTitleDate"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/noPlanImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/contentsMarginHorizontal"
            android:layout_marginTop="@dimen/contentsMarginVertical"
            android:layout_marginEnd="@dimen/contentsMarginHorizontal"
            android:src="@drawable/ic_list"
            app:layout_constraintBottom_toTopOf="@id/noPlanTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/planTitle"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/noPlanTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/contentsMarginHorizontal"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/contentsMarginHorizontal"
            android:gravity="center"
            android:text="@string/noPlanText"
            app:layout_constraintBottom_toTopOf="@id/addPlanBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/noPlanImageView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/addPlanBtn"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="31dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="16dp"
            app:cardBackgroundColor="@color/background_light_grey"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/planNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/addPlanText"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/plusImageView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed" />

                <ImageView
                    android:id="@+id/plusImageView"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_add"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>