<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/statisticsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/titleTextMarginStart"
            android:layout_marginTop="@dimen/titleTextMarginTop"
            android:text="@string/pageStatisticsTitle"
            android:textSize="@dimen/titleTextSize"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="26dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/statisticsTitle"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/thisWeekTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/thisWeekTitle"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/thisWeekDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@id/thisWeekTitle"
                    app:layout_constraintStart_toEndOf="@id/thisWeekTitle"
                    tools:text="2022.02.14 - 2022.02.21" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/statisticsCardView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="15dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/thisWeekTitle"
                    app:layout_constraintVertical_bias="0.0">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="25dp"
                        android:paddingBottom="25dp">

                        <ImageView
                            android:id="@+id/medalImageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:background="@drawable/ic_military"
                            app:layout_constraintBottom_toBottomOf="@id/statisticsWeekResult"
                            app:layout_constraintEnd_toStartOf="@id/statisticsWeekResult"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/statisticsWeekResult"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="100%"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/statisticsWeekSubTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="2dp"
                            android:text="@string/statisticsSubTitle"
                            android:textSize="18dp"
                            app:layout_constraintBottom_toBottomOf="@id/statisticsWeekResult"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@id/statisticsWeekResult"
                            app:layout_constraintTop_toTopOf="@id/statisticsWeekResult" />

                        <TextView
                            android:id="@+id/statisticsMyDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/myDescription100"
                            android:textSize="17sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/statisticsWeekResult" />

                        <include
                            android:id="@+id/totalWeekInfo"
                            layout="@layout/statistic_text_view"
                            android:layout_width="0dp"
                            android:layout_height="25dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            app:layout_constraintEnd_toStartOf="@id/successWeekInfo"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/statisticsMyDescription" />

                        <include
                            android:id="@+id/successWeekInfo"
                            layout="@layout/statistic_text_view"
                            android:layout_width="0dp"
                            android:layout_height="25dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="20dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/totalWeekInfo"
                            app:layout_constraintTop_toTopOf="@id/totalWeekInfo" />

                        <include
                            android:id="@+id/cancelWeekInfo"
                            layout="@layout/statistic_text_view"
                            android:layout_width="0dp"
                            android:layout_height="25dp"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="10dp"
                            app:layout_constraintEnd_toStartOf="@id/failWeekInfo"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/totalWeekInfo" />

                        <include
                            android:id="@+id/failWeekInfo"
                            layout="@layout/statistic_text_view"
                            android:layout_width="0dp"
                            android:layout_height="25dp"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="20dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@id/cancelWeekInfo"
                            app:layout_constraintTop_toTopOf="@id/cancelWeekInfo" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tagStatisticsRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:clipChildren="false"
                    android:clipToPadding="false"
                    android:elevation="3dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/statisticsCardView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>